--- a/primer.css
+++ b/primer.css
@@ -1,3 +1,5 @@
+
+
 h3{
     margin-top: 30px;
 }
@@ -14,5 +16,24 @@ h3{
     justify-content: space-around;
 }
 .vk{
-    margin-left: 950px;
+    margin-left: 450px;
+}
+.pravila{
+    margin-left: 30px;
+    margin-right: 30px;
+    p{
+        margin-left: 420px;
+        font-size: 26px;
+        font-weight: 500;
+    }
+}
+.info{
+    margin: 50px 30px 0px 50px;
+}
+.btn-primary{
+    margin-top: 40px;
+    margin-left: 25px;
+}
+.offcanvas-body{
+    font-size: 14px;
 }
